# Sighash-Discriminator-Proc-Macro

./: Cargo.toml
src/: lib.rs  sighash.rs
