[package]
name = "discriminator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true
[dependencies]
proc-macro2 = { version = "1.0", features=["span-locations"]}
syn = { version = "1.0.60", features = ["full", "extra-traits", "parsing"] }
quote = "1.0.18"
anchor-lang = "0.24.2"

